k8s_file/test_k8s/CKA/front-end-svc.yaml
apiVersion: v1
# 可以用 kubectl expose --name=front-end-svc deploy front-end --port=80 --type=NodePort
# 在服务front-end-svc中，暴漏部署front-end的容器端口80，以NodePort的形式
kind: Service
metadata:
  name: front-end-svc
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
      nodePort: 30007
      name: http
